--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 14
 
       - name: Install Node.js dependencies
-        run: npm ci
+        run: npm i
 
       - name: Deploy
         run: npm run deploy
