--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,10 @@ jobs:
 
       - name: Install Node.js dependencies
         run: npm i
-
+      - name: set git login
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
       - name: Deploy
         run: npm run deploy
         env:
