--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
     steps:
       - name: Check out Git repository
       - uses: actions/checkout@v2
+      - uses: fregante/setup-git-user@v1
 
       - name: Set up Node.js
       - uses: actions/setup-node@v1
@@ -27,7 +28,6 @@ jobs:
       - name: Install Node.js dependencies
         run: npm i
       - name: Deploy
-        uses: fregante/setup-git-user@v1
-      - run: npm run deploy
+        run: npm run deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
