--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,11 +30,7 @@ jobs:
       - name: Deploy
         run: |
           npm run build
-          cd dist
-          git init
-          git config --global user.email "qrsnake@gmail.com"
-          git config --global user.name "deploy-bot"
-          git checkout -b main
+          echo 'teste' > test.txt
           git add -A
           git commit -m 'deploy'
 
