--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "jsqr": "^1.4.0",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.11",
+    "vue-axios": "^3.4.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0"
   },
